--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,15 @@ div {
     margin: auto;
     text-align: center;
   }
+  .no-m-container{
+    width: 100%;
+    padding-left: 10%;
+    padding-right: 10%;
+    margin: 0;
+    text-align: center;
+    height: 100vh;
+
+  }
   .fullscreen-video-wrap{
     position: absolute;
     top: 0;
@@ -133,25 +142,25 @@ div {
   padding-top: 60px;
 }
 /*About Section*/
-.about-section{
+/* .about-section{
   height:100vh;
   display:flex;
   padding: 70px 0 70px 0;
-}
+} */
 .about-header{
   color:black;
 }
 .about-content{
   color:black;
 }
-.project-section{
+/* .project-section{
   padding: 100px 0 130px 0;
   margin:0px;
   background-color:#f5f5f5;
   text-align: center;
   position: relative;
   height: 100vh;
-}
+} */
 .project-header{
   color:black;
 }
