--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+html{
+  scroll-behavior: smooth;
+}
 .overflow-wrap {
   overflow-x: hidden;
 }
@@ -34,8 +37,8 @@ div {
   }
   .no-m-container{
     width: 100%;
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 15%;
+    padding-right: 15%;
     margin: 0;
     text-align: center;
     height: 100vh;
@@ -149,24 +152,24 @@ div {
 } */
 .about-header{
   color:black;
+  justify-content: center;
+  text-align: center;
 }
 .about-content{
   color:black;
+/* Project Section*/
 }
-/* .project-section{
-  padding: 100px 0 130px 0;
-  margin:0px;
-  background-color:#f5f5f5;
-  text-align: center;
-  position: relative;
+ .project-background{
+  padding-top: 100px;
+  padding-bottom: 130px;
   height: 100vh;
-} */
+}
 .project-header{
   color:black;
+  justify-content: center;
+  text-align: center;
 }
-.project-content{
-  color:black;
-}
+
 /* Contact Form */
 .contact-section{
   background-color: #1B242F;
