--- a/css/style.css
+++ b/css/style.css
@@ -1,122 +1,137 @@
-html{
+html {
   scroll-behavior: smooth;
 }
+
 .overflow-wrap {
   overflow-x: hidden;
 }
+
 div {
-    display: block;
+  display: block;
 }
+
 /* Video Background */
-*{
-    box-sizing: border-box;
-  }
-  
-  body{
-    margin:0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size:1rem;
-    color: white;
-    overflow-x: hidden;
-    text-align: center;
-  }
-  
-  .v-header{
-    height:100vh;
-    display:flex;
-    align-items: center;
-    color: white;
-  }
-  
-  .container{
-    max-width: 960px;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    margin: auto;
-    text-align: center;
-  }
-  .no-m-container{
-    width: 100%;
-    padding-left: 15%;
-    padding-right: 15%;
-    margin: 0;
-    text-align: center;
-    height: 100vh;
 
-  }
-  .fullscreen-video-wrap{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-  }
-  .fullscreen-video-wrap video{
-    min-width: 100%;
-    min-height: 100%;
-  }
-  
-  .header-overlay{
-    height: 100vh;
-    width:100vw;
-    position: absolute;
-    top:0;
-    left:0;
-    z-index: 1;
-  }
-  .header-content{
-    z-index: 2;
-    margin-bottom: 20px;
-    font-size: 16px;
-  }
-  .header-content h1{
-    font-size:50px;
-    margin-bottom:0;
-  }
-  
-  .header-content h2{
-    font-size: 1.5rem;
-    display: block;
-    padding-bottom: 2rem;
-  }
-  /* Button*/
-  .port-button{
-    margin-bottom: 53px;
-    border: 2px solid #fff;
-    transition: all .5s;
-    cursor: pointer;
-  }
-  .btn-primary{
-    background-color: transparent;
-  }
+* {
+  box-sizing: border-box;
+}
 
-  @media(max-width:960px){
-    .container{
-      padding-right:3rem;
-      padding-left:3rem;
-    }
-  }
+body {
+  margin: 0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1rem;
+  color: white;
+  overflow-x: hidden;
+  text-align: center;
+}
 
+.v-header {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  color: white;
+}
+
+.container {
+  max-width: 960px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin: auto;
+  text-align: center;
+}
+
+.no-m-container {
+  width: 100%;
+  padding-left: 15%;
+  padding-right: 15%;
+  margin: 0;
+  text-align: center;
+  height: 100vh;
+}
+
+.fullscreen-video-wrap {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.fullscreen-video-wrap video {
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.header-overlay {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.header-content {
+  z-index: 2;
+  margin-bottom: 20px;
+  font-size: 16px;
+}
+
+.header-content h1 {
+  font-size: 50px;
+  margin-bottom: 0;
+}
+
+.header-content h2 {
+  font-size: 1.5rem;
+  display: block;
+  padding-bottom: 2rem;
+}
+
+/* Button*/
+
+.port-button {
+  margin-bottom: 53px;
+  border: 2px solid #fff;
+  transition: all .5s;
+  cursor: pointer;
+}
+
+.btn-primary {
+  background-color: transparent;
+}
+
+@media(max-width:960px) {
+  .container {
+    padding-right: 3rem;
+    padding-left: 3rem;
+  }
+}
 
 /* Sticky Navbar */
+
 /* Style the navbar */
+
 #navigation-bar {
   overflow: hidden;
   background-color: #333;
   z-index: 2;
 }
-.navbar{
+
+.navbar {
   padding-bottom: 0px;
   padding-top: 0px;
   border-color: blue;
   border-bottom: 10px;
 }
+
 .bg-dark {
   background-color: #1B242F!important;
 }
 
 /* Navbar links */
+
 #navigation-bar a {
   float: left;
   display: block;
@@ -125,15 +140,19 @@ div {
   padding: 14px;
   text-decoration: none;
 }
+
 #navigation-bar a:hover {
-  color: palevioletred;
+  color: aqua;
 }
+
 /* Page content */
+
 .content {
   padding: 16px;
 }
 
 /* The sticky class is added to the navbar with JS when it reaches its scroll position */
+
 .sticky {
   position: fixed;
   top: 0;
@@ -141,44 +160,557 @@ div {
 }
 
 /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
-.sticky + .content {
+
+.sticky+.content {
   padding-top: 60px;
 }
+
 /*About Section*/
+
 /* .about-section{
   height:100vh;
   display:flex;
   padding: 70px 0 70px 0;
 } */
-.about-header{
-  color:black;
+
+.about-header {
+  color: black;
   justify-content: center;
   text-align: center;
 }
-.about-content{
-  color:black;
-/* Project Section*/
+
+.about-content {
+  color: black;
+  /* Project Section*/
 }
- .project-background{
+
+.box {
+  display: flex;
+  width: 15%;
+  height: 8px;
+  margin: 5px 0px 60px 0px;
+}
+
+.box-sm {
+  height: 5px;
+  margin: 0;
+  flex-grow: 1.5;
+  transition: all .8s ease-in-out;
+  cursor: pointer;
+}
+.box-sm:hover {
+  flex-grow: 12;
+}
+
+.post {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.aqua {
+  background-color: aqua;
+}
+
+.bluegrey {
+  background-color: #1B242F;
+}
+
+.zoom-effect-container {
+    position: relative;
+    overflow: hidden;
+}
+.project-background {
   padding-top: 100px;
   padding-bottom: 130px;
   height: 100vh;
 }
-.project-header{
-  color:black;
+
+.project-header {
+  color: black;
   justify-content: center;
   text-align: center;
 }
+.img__img{
+  height: 300px;
+  width: 390px;
+}
 
+.img__wrap {
+  position: relative;
+}
+
+.img__description {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: black;
+  color: #fff;
+  visibility: hidden;
+  opacity: 0.5;
+  line-height: 18;
+  /* transition effect. not necessary *//* 
+  transition: opacity .2s, visibility .2s; */
+}
+.img__wrap:hover .img__description {
+  visibility: visible;
+  opacity: 0.5;
+  margin: 0;
+}
+div.gallery {
+  position: relative;
+  overflow: hidden;
+  max-width: 100%;
+}
+ div.gallery:hover {
+  -webkit-transform: scale(1.11);
+  transform: scale(1.11);
+}
+* {
+  box-sizing: border-box;
+}
+@media only screen and (max-width: 700px) {
+  .responsive {
+    width: 49.99999%;
+    margin: 6px 0;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .responsive {
+    width: 100%;
+  }
+}
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.row.row-grid [class*="col-"]+[class*="col-"] {
+  margin-top: 15px;
+}
+@media (min-width: 1200px) {
+  .row.row-grid [class*="col-lg-"]+[class*="col-lg-"] {
+    margin-top: 0;
+  }
+}
+@media (min-width: 992px) {
+  .row.row-grid [class*="col-md-"]+[class*="col-md-"] {
+    margin-top: 0;
+  }
+}
+@media (min-width: 768px) {
+  .row.row-grid [class*="col-sm-"]+[class*="col-sm-"] {
+    margin-top: 0;
+  }
+}
 /* Contact Form */
-.contact-section{
-  background-color: #1B242F;
+
+.contact-section {
+  /* background-color: #1B242F; */
+  height: 75vh;
+  padding: 0px 650px 0 650px;
+}
+.contact-header {
+  padding-top: 70px;
+}
+/*---------------------------------------------*/
+
+input {
+  outline: none;
+  border: none;
+}
+
+textarea {
+  outline: none;
+  border: none;
+}
+
+textarea:focus, input:focus {
+  border-color: transparent !important;
+}
+
+input:focus::-webkit-input-placeholder {
+  color: transparent;
+}
+
+input:focus:-moz-placeholder {
+  color: transparent;
+}
+
+input:focus::-moz-placeholder {
+  color: transparent;
+}
+
+input:focus:-ms-input-placeholder {
+  color: transparent;
+}
+
+textarea:focus::-webkit-input-placeholder {
+  color: transparent;
+}
+
+textarea:focus:-moz-placeholder {
+  color: transparent;
+}
+
+textarea:focus::-moz-placeholder {
+  color: transparent;
+}
+
+textarea:focus:-ms-input-placeholder {
+  color: transparent;
+}
+
+input::-webkit-input-placeholder {
+  color: #999999;
+}
+
+input:-moz-placeholder {
+  color: #999999;
+}
+
+input::-moz-placeholder {
+  color: #999999;
+}
+
+input:-ms-input-placeholder {
+  color: #999999;
+}
+
+textarea::-webkit-input-placeholder {
+  color: #999999;
+}
+
+textarea:-moz-placeholder {
+  color: #999999;
+}
+
+textarea::-moz-placeholder {
+  color: #999999;
+}
+
+textarea:-ms-input-placeholder {
+  color: #999999;
+}
+
+/*---------------------------------------------*/
+
+button {
+  outline: none !important;
+  border: none;
+  background: transparent;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+iframe {
+  border: none !important;
+}
+
+/*//////////////////////////////////////////////////////////////////
+[ Contact 2 ]*/
+
+.bg-contact2 {
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.container-contact2 {
+  width: 100%;
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+  background: rgba(219, 21, 99, 0.8);
+  background: -webkit-linear-gradient(45deg, rgba(213, 0, 125, 0.8), rgba(229, 57, 53, 0.8));
+  background: -o-linear-gradient(45deg, rgba(213, 0, 125, 0.8), rgba(229, 57, 53, 0.8));
+  background: -moz-linear-gradient(45deg, rgba(213, 0, 125, 0.8), rgba(229, 57, 53, 0.8));
+  background: linear-gradient(45deg, rgba(213, 0, 125, 0.8), rgba(229, 57, 53, 0.8));
+}
+
+.wrap-contact2 {
+  width: 790px;
+  background: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+  padding: 72px 55px 90px 55px;
+}
+
+/*------------------------------------------------------------------
+[  ]*/
+
+.contact2-form {
+  width: 100%;
+}
+
+.contact2-form-title {
+  display: block;
+  font-family: Poppins-Bold;
+  font-size: 39px;
+  color: #333333;
+  line-height: 1.2;
+  text-align: center;
+  padding-bottom: 90px;
+}
+
+/*------------------------------------------------------------------
+[  ]*/
+
+.wrap-input2 {
+  width: 100%;
+  position: relative;
+  border-bottom: 2px solid #adadad;
+  margin-bottom: 37px;
+}
+
+.input2 {
+  display: block;
+  width: 100%;
+  font-family: Poppins-Regular;
+  font-size: 15px;
+  color: #555555;
+  line-height: 1.2;
+}
+
+.focus-input2 {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+}
+
+.focus-input2::before {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 0;
+  height: 2px;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+  background: rgba(219, 21, 99, 1);
+  background: -webkit-linear-gradient(45deg, #d5007d, #e53935);
+  background: -o-linear-gradient(45deg, #d5007d, #e53935);
+  background: -moz-linear-gradient(45deg, #d5007d, #e53935);
+  background: linear-gradient(45deg, #d5007d, #e53935);
+}
+
+.focus-input2::after {
+  content: attr(data-placeholder);
+  display: block;
+  width: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0;
+  font-family: Poppins-Regular;
+  font-size: 13px;
+  color: #999999;
+  line-height: 1.2;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+/*---------------------------------------------*/
+
+input.input2 {
+  height: 45px;
+}
+
+input.input2+.focus-input2::after {
+  top: 16px;
+  left: 0;
+}
+
+textarea.input2 {
+  min-height: 115px;
+  padding-top: 13px;
+  padding-bottom: 13px;
+}
+
+textarea.input2+.focus-input2::after {
+  top: 16px;
+  left: 0;
+}
+
+.input2:focus+.focus-input2::after {
+  top: -13px;
+}
+
+.input2:focus+.focus-input2::before {
+  width: 100%;
+}
+
+.has-val.input2+.focus-input2::after {
+  top: -13px;
+}
+
+.has-val.input2+.focus-input2::before {
+  width: 100%;
+}
+
+/*------------------------------------------------------------------
+[ Button ]*/
+
+.container-contact2-form-btn {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: 13px;
+  float: right;
+}
+
+.wrap-contact2-form-btn {
+  display: block;
+  position: relative;
+  z-index: 1;
+  border-radius: 2px;
+  width: auto;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.contact2-form-bgbtn {
+  position: absolute;
+  z-index: -1;
+  width: 300%;
+  height: 100%;
+  background: rgba(219, 21, 99, 1);
+  background: -webkit-linear-gradient(-135deg, #d5007d, #e53935, #d5007d, #e53935);
+  background: -o-linear-gradient(-135deg, #d5007d, #e53935, #d5007d, #e53935);
+  background: -moz-linear-gradient(-135deg, #d5007d, #e53935, #d5007d, #e53935);
+  background: linear-gradient(-135deg, #d5007d, #e53935, #d5007d, #e53935);
+  top: 0;
+  left: -100%;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.contact2-form-btn {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px;
+  min-width: 244px;
+  height: 50px;
+  font-family: Poppins-Medium;
+  font-size: 16px;
+  color: #fff;
+  line-height: 1.2;
+}
+
+.wrap-contact2-form-btn:hover .contact2-form-bgbtn {
+  left: 0;
+}
+
+/*------------------------------------------------------------------
+[ Responsive ]*/
+
+@media (max-width: 576px) {
+  .wrap-contact2 {
+    padding: 72px 15px 90px 15px;
+  }
+}
+
+/*------------------------------------------------------------------
+[ Alert validate ]*/
+
+.validate-input {
+  position: relative;
+}
+
+.alert-validate::before {
+  content: attr(data-validate);
+  position: absolute;
+  max-width: 70%;
+  background-color: white;
+  border: 1px solid #c80000;
+  border-radius: 2px;
+  padding: 4px 25px 4px 10px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+  right: 0px;
+  pointer-events: none;
+  font-family: Poppins-Regular;
+  color: #c80000;
+  font-size: 13px;
+  line-height: 1.4;
+  text-align: left;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: opacity 0.4s;
+  -o-transition: opacity 0.4s;
+  -moz-transition: opacity 0.4s;
+  transition: opacity 0.4s;
+}
+
+.alert-validate::after {
+  content: "\f12a";
+  font-family: FontAwesome;
+  display: block;
+  position: absolute;
+  color: #c80000;
+  font-size: 16px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+  right: 8px;
+}
+
+.alert-validate:hover:before {
+  visibility: visible;
+  opacity: 1;
+}
+
+@media (max-width: 992px) {
+  .alert-validate::before {
+    visibility: visible;
+    opacity: 1;
+  }
 }
 
 /* Footer */
+
 /*Return Home Button*/
-footer .fa-caret-square-up{
-  color: red;
+
+footer .fa-caret-square-up {
+  color: aqua;
   top: -25px;
   margin: 0 auto;
   left: 0;
@@ -191,37 +723,49 @@ footer .fa-caret-square-up{
 }
 
 /*Social Links*/
-.social-link-bar{
+
+.social-link-bar {
   background-color: #1B242F;
   padding: 70px 0 50px 0;
   position: relative;
   display: block;
+  height: 20vh;
 }
-.fab{
+
+.fab {
   color: white;
 }
+
 /* shitwontwork */
+
 /* .social.fa-linkedin:hover{
   color: red;
 } */
-.flex.row{
+
+.flex.row {
   flex-direction: row;
 }
-.flex{
+
+.flex {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.icon-wrap{
+
+.icon-wrap {
   margin: 0px 15px 0px 15px;
 }
+
 /* Name and Copyright*/
-.footnote{
+
+.footnote {
   margin-top: 35px;
   text-align: center;
 }
+
 /*Highlighter*/
-.highlight{
-  color:aqua;
+
+.highlight {
+  color: aqua;
 }
