--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,7 @@ body {
   transition: all .8s ease-in-out;
   cursor: pointer;
 }
+
 .box-sm:hover {
   flex-grow: 12;
 }
@@ -217,9 +218,10 @@ body {
 }
 
 .zoom-effect-container {
-    position: relative;
-    overflow: hidden;
+  position: relative;
+  overflow: hidden;
 }
+
 .project-background {
   padding-top: 100px;
   padding-bottom: 130px;
@@ -231,7 +233,8 @@ body {
   justify-content: center;
   text-align: center;
 }
-.img__img{
+
+.img__img {
   height: 300px;
   width: 390px;
 }
@@ -251,60 +254,73 @@ body {
   visibility: hidden;
   opacity: 0.5;
   line-height: 18;
-  /* transition effect. not necessary *//* 
+  /* transition effect. not necessary */
+  /* 
   transition: opacity .2s, visibility .2s; */
 }
+
 .img__wrap:hover .img__description {
   visibility: visible;
   opacity: 0.5;
   margin: 0;
 }
+
 div.gallery {
   position: relative;
   overflow: hidden;
   max-width: 100%;
 }
- div.gallery:hover {
+
+div.gallery:hover {
   -webkit-transform: scale(1.11);
   transform: scale(1.11);
 }
+
 * {
   box-sizing: border-box;
 }
+
 @media only screen and (max-width: 700px) {
   .responsive {
     width: 49.99999%;
     margin: 6px 0;
   }
 }
+
 @media only screen and (max-width: 500px) {
   .responsive {
     width: 100%;
   }
 }
+
 .clearfix:after {
   content: "";
   display: table;
   clear: both;
 }
+
 .row.row-grid [class*="col-"]+[class*="col-"] {
   margin-top: 15px;
 }
+
 @media (min-width: 1200px) {
   .row.row-grid [class*="col-lg-"]+[class*="col-lg-"] {
     margin-top: 0;
   }
 }
+
 @media (min-width: 992px) {
   .row.row-grid [class*="col-md-"]+[class*="col-md-"] {
     margin-top: 0;
   }
 }
+
 @media (min-width: 768px) {
   .row.row-grid [class*="col-sm-"]+[class*="col-sm-"] {
     margin-top: 0;
   }
 }
+
 /* Contact Form */
 
 .contact-section {
@@ -312,9 +328,11 @@ div.gallery {
   height: 75vh;
   padding: 0px 650px 0 650px;
 }
+
 .contact-header {
   padding-top: 70px;
 }
+
 /*---------------------------------------------*/
 
 input {
@@ -762,10 +780,96 @@ footer .fa-caret-square-up {
 .footnote {
   margin-top: 35px;
   text-align: center;
+  background-color: #1B242F;
 }
 
 /*Highlighter*/
 
 .highlight {
   color: aqua;
+}
+
+/* MEDIA QUERY TEMPLATE */
+
+/* Smartphones (portrait and landscape) ----------- */
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  /* Styles */
+}
+
+/* Smartphones (landscape) ----------- */
+
+@media only screen and (min-width: 321px) {
+  /* Styles */
+}
+
+/* Smartphones (portrait) ----------- */
+
+@media only screen and (max-width: 320px) {
+  /* Styles */
+}
+
+/* iPads (portrait and landscape) ----------- */
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  /* Styles */
+  .zoom-effect-container {
+    height: 100px;
+    width: 100px;
+  }
+  .contact-section {
+    /* background-color: #1B242F; */
+    height: 75vh;
+    padding: 0px 350px 0 350px;
+  }
+  .img__description {
+    line-height: 14;
+    /* transition effect. not necessary */
+    /* 
+        transition: opacity .2s, visibility .2s; */
+  }
+}
+
+/* iPads (landscape) ----------- */
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+  /* Styles */
+}
+
+/* iPads (portrait) ----------- */
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+  /* Styles */
+}
+
+/* Desktops and laptops ----------- */
+
+@media only screen and (min-width: 1224px) {
+  /* Styles */
+  @media screen and (min-width: 1025px) and (max-width: 1500px) {
+    .zoom-effect-container {
+      height: 215px;
+      width: 280px;
+    }
+    .contact-section {
+      /* background-color: #1B242F; */
+      height: 75vh;
+      padding: 0px 350px 0 350px;
+    }
+    .img__description {
+      line-height: 14;
+    }
+  }
+}
+
+/* Large screens ----------- */
+
+@media only screen and (min-width: 1824px) {
+  /* Styles */
+}
+
+/* iPhone 4 ----------- */
+
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
+  /* Styles */
 }
