--- a/css/style.css
+++ b/css/style.css
@@ -684,15 +684,12 @@ a:hover {
 /* Desktops and laptops ----------- */
 
 @media only screen and (min-width: 1224px) {
+}
   /* Styles */
   @media screen and (min-width: 1025px) and (max-width: 1500px) {
     body {
       background-color: white;
     }
-    /* .zoom-effect-container {
-      height: 215px;
-      width: 280px;
-    } */
     .contact-section {
       height: 75vh;
       padding: 0px 400px 0 400px;
@@ -714,7 +711,7 @@ a:hover {
       font-size: 13px;
     }
   }
-}
+
 
 /* Large screens ----------- */
 
@@ -722,6 +719,11 @@ a:hover {
   /* Styles */
   .contact-header {
     padding-top: 60px;
+  }
+  #about.no-m-container {
+    padding-left: 8%;
+    padding-right: 8%;
+    height: 110vh;
   }
   /* iPhone 4 ----------- */
   @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
